--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-imagemin": "^6.1.0",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^3.2.1"
+    "gulp-sass": "^3.2.1",
+    "node-sass": "^4.12.0"
   },
   "dependencies": {
     "@babel/core": "^7.6.0",
